# Novaire

./: .gitignore  ARCHITECTURE.md  CONTRACTS.md  README.md  check_balances.js  check_spot_price.js  debug_trade.js  decode_events.js  dev.db  get_marketplace_state.sh  get_state.js  history-store.json  index.html  modify.py  package-lock.json  package.json  patch.diff  patch_deploy.py  patch_deploy_ts.py  patch_marketplace.py  patch_verification.py  registered_users.json  run_bootstrap.sh  run_invokes.sh  run_invokes2.sh  scratch_trace.ts  test_balance.ts  test_bindings.js  test_bindings.ts  test_bindings2.ts  test_import.ts  test_math  test_math.rs  test_protocol.ts  test_pt_price.ts  test_sac.rs  test_swap_yt_math  test_swap_yt_math.rs  test_trade.js  trade_audit.sh  (+1 more)
contracts/: Cargo.toml
contracts/factory/: Cargo.toml
contracts/factory/src/: lib.rs  test.rs
contracts/factory/test_snapshots/audit_tests/: test_boundary_huge_exchange_rate.1.json  test_boundary_tiny_deposit.1.json  test_economic_sandwich_yield_attempt.1.json  test_fail_invalid_exchange_rate_decrease.1.json  test_fail_unauthorized_yield.1.json  test_fail_unauthorized_yield.2.json  test_fail_withdraw_more_than_owned.1.json  test_invariant_accounting_across_complex_transitions.1.json  test_invariants_during_back_to_back_deposits_withdraws.1.json  test_ledger_progression_with_yield.1.json  test_mock_vault_integration.1.json  test_stress_randomized_operations.1.json
contracts/factory/test_snapshots/test/: test_complex_multi_user_scenario.1.json  test_deposit_negative.1.json  test_duplicate_maturity_panic.1.json  test_events.1.json  test_extremely_large_deposits.1.json  (+19 more)
contracts/integration_tests/: Cargo.toml
contracts/integration_tests/proptest-regressions/: fuzz.txt
contracts/integration_tests/src/: e2e.rs  framework.rs  fuzz.rs  invariants.rs  l1_regression.rs  lib.rs  m1_production_bootstrap.rs  m1_regression.rs  m2_regression.rs  m3_regression.rs  m5_regression.rs  simulation.rs  stress.rs
contracts/intent_engine/: Cargo.toml
contracts/intent_engine/src/: lib.rs
contracts/marketplace/: Cargo.toml
contracts/marketplace/src/: lib.rs
contracts/maturity_engine/: Cargo.toml
contracts/maturity_engine/src/: lib.rs
contracts/rollover/: Cargo.toml
contracts/rollover/src/: lib.rs  test.rs
contracts/rollover/test_snapshots/: test_novaire_end_to_end_integration.1.json
contracts/rollover/tests/: e2e.rs
contracts/sy_wrapper/: Cargo.toml
contracts/sy_wrapper/src/: audit_tests.rs  lib.rs  test.rs
contracts/tokenizer/: Cargo.toml
contracts/tokenizer/pt_token/: Cargo.toml
contracts/tokenizer/tokenizer/: Cargo.toml
contracts/tokenizer/yt_token/: Cargo.toml
contracts/vault/: Cargo.toml
contracts/vault/src/: lib.rs
(+432 files in other folders)
