[workspace]
resolver = "2"
members = [
    "factory",
    "integration_tests",
    "intent_engine",
    "marketplace",
    "maturity_engine",
    "rollover",
    "sy_wrapper",
    "tokenizer/tokenizer",
    "tokenizer/pt_token",
    "tokenizer/yt_token",
    "vault"
]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
