[package]
name = "tokenizer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "22.0.0"

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
vault = { path = "../../vault" }
sy_wrapper = { path = "../../sy_wrapper" }
pt_token = { path = "../pt_token" }
yt_token = { path = "../yt_token" }
